pequenas implementações defensivas